@startuml
!theme plain
'--------------------------------------------------
' Diagramme ERD - Kotlin Monsters (Sprint 3)
'--------------------------------------------------

entity "Entraineur" as Entraineur {
  * id : INT <<PK>>
  --
  nom : VARCHAR(255)
  argent : INT
}

entity "EspeceMonstre" as EspeceMonstre {
  * id : INT <<PK>>
  --
  nom : VARCHAR(255)
  type : VARCHAR(255)
  baseAttaque : INT
  baseDefense : INT
  baseVitesse : INT
  baseAttaqueSpe : INT
  baseDefenseSpe : INT
  basePv : INT
  modAttaque : DOUBLE
  modDefense : DOUBLE
  modVitesse : DOUBLE
  modAttaqueSpe : DOUBLE
  modDefenseSpe : DOUBLE
  modPv : DOUBLE
  description : TEXT
  particularites : TEXT
  caracteres : TEXT
}

entity "Zone" as Zone {
  * id : INT <<PK>>
  --
  nom : VARCHAR(255)
  description : TEXT
}

entity "Zone_EspeceMonstre" as Zone_EspeceMonstre {
  * zone_id : INT <<FK>>
  * espece_id : INT <<FK>>
}

entity "IndividuMonstre" as IndividuMonstre {
  * id : INT <<PK>>
  --
  nom : VARCHAR(255)
  niveau : INT
  attaque : INT
  defense : INT
  vitesse : INT
  attaqueSpe : INT
  defenseSpe : INT
  pvMax : INT
  potentiel : DOUBLE
  exp : DOUBLE
  pv : INT
  --
  espece_id : INT <<FK>>
  entraineur_equipe_id : INT <<FK>>
  entraineur_boite_id : INT <<FK>>
}

'--------------------------------------------------
' Relations
'--------------------------------------------------

Entraineur ||--o{ IndividuMonstre : "possède (équipe)"
Entraineur ||--o{ IndividuMonstre : "possède (boîte)"
EspeceMonstre ||--o{ IndividuMonstre : "appartient à"
Zone ||--o{ Zone_EspeceMonstre : "contient"
EspeceMonstre ||--o{ Zone_EspeceMonstre : "apparaît dans"
'TODO

@enduml
